--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 80,
    "metadata": {
     "scrolled": true
    },
@@ -688,7 +688,7 @@
     "features_final = pd.get_dummies(features_log_minmax_transform)\n",
     "\n",
     "# TODO: Encode the 'income_raw' data to numerical values\n",
-    "income = pd.get_dummies(income_raw)\n",
+    "income = income_raw.map({'<=50K': 0, '>50K': 1})\n",
     "\n",
     "# Print the number of features after one-hot encoding\n",
     "encoded = list(features_final.columns)\n",
@@ -802,11 +802,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naive Predictor: [Accuracy score: 0.1986, F-score: 0.2365]\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "TP = np.sum(income) # Counting the ones as this is the naive case. Note that 'income' is the 'income_raw' data \n",
@@ -817,12 +823,15 @@
     "FN = 0 # No predicted negatives in the naive case\n",
     "'''\n",
     "# TODO: Calculate accuracy, precision and recall\n",
-    "accuracy = None\n",
-    "recall = None\n",
-    "precision = None\n",
+    "TP = np.sum(income)\n",
+    "FP = income.count()\n",
+    "accuracy = TP / (TP + FP)\n",
+    "recall = TP / TP\n",
+    "precision = TP / (TP + FP)\n",
     "\n",
     "# TODO: Calculate F-score using the formula above for beta = 0.5 and correct values for precision and recall.\n",
-    "fscore = None\n",
+    "beta_squared = 0.5 ** 2\n",
+    "fscore = (1 + beta_squared) * (precision * recall) / (beta_squared * precision + recall)\n",
     "\n",
     "# Print the results \n",
     "print(\"Naive Predictor: [Accuracy score: {:.4f}, F-score: {:.4f}]\".format(accuracy, fscore))"
