--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -2069,9 +2069,6 @@
     "\n",
     "- When researching the types of real world applications of Logistic Regression, I noticed that some such applications involved solving similar problems to the Finding Donors problem space. So this little bit of simple intuition is another reason this model might be a good candidate.\n",
     "\n",
-    "- @todo: Come up with at least one more!!\n",
-    "- Sensitive to outliers. Does this bode well or poorly for our problem?\n",
-    "\n",
     "##### Support Vector Machine (SVM):\n",
     "\n",
     "_Describe one real-world application in industry where the model can be applied._\n",
@@ -2139,13 +2136,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 118,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Import two metrics from sklearn - fbeta_score and accuracy_score\n",
+    "from sklearn.metrics import fbeta_score, accuracy_score\n",
     "\n",
     "def train_predict(learner, sample_size, X_train, y_train, X_test, y_test): \n",
     "    '''\n",
@@ -2162,33 +2158,33 @@
     "    \n",
     "    # TODO: Fit the learner to the training data using slicing with 'sample_size' using .fit(training_features[:], training_labels[:])\n",
     "    start = time() # Get start time\n",
-    "    learner = None\n",
+    "    learner = learner.fit(X_train[:sample_size], y_train[:sample_size])\n",
     "    end = time() # Get end time\n",
     "    \n",
     "    # TODO: Calculate the training time\n",
-    "    results['train_time'] = None\n",
+    "    results['train_time'] = end - start\n",
     "        \n",
     "    # TODO: Get the predictions on the test set(X_test),\n",
     "    #       then get predictions on the first 300 training samples(X_train) using .predict()\n",
     "    start = time() # Get start time\n",
-    "    predictions_test = None\n",
-    "    predictions_train = None\n",
+    "    predictions_test = learner.predict(X_test)\n",
+    "    predictions_train = learner.predict(X_train[:300])\n",
     "    end = time() # Get end time\n",
     "    \n",
     "    # TODO: Calculate the total prediction time\n",
-    "    results['pred_time'] = None\n",
+    "    results['pred_time'] = end - start\n",
     "            \n",
     "    # TODO: Compute accuracy on the first 300 training samples which is y_train[:300]\n",
-    "    results['acc_train'] = None\n",
+    "    results['acc_train'] = accuracy_score(y_train[:300], predictions_train)\n",
     "        \n",
     "    # TODO: Compute accuracy on test set using accuracy_score()\n",
-    "    results['acc_test'] = None\n",
+    "    results['acc_test'] = accuracy_score(y_test, predictions_test)\n",
     "    \n",
     "    # TODO: Compute F-score on the the first 300 training samples using fbeta_score()\n",
-    "    results['f_train'] = None\n",
+    "    results['f_train'] = fbeta_score(y_train[:300], predictions_train, 0.5)\n",
     "        \n",
     "    # TODO: Compute F-score on the test set which is y_test\n",
-    "    results['f_test'] = None\n",
+    "    results['f_test'] = fbeta_score(y)\n",
     "       \n",
     "    # Success\n",
     "    print(\"{} trained on {} samples.\".format(learner.__class__.__name__, sample_size))\n",
