--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -2406,7 +2406,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** "
+    "**Answer:**\n",
+    "\n",
+    "The Random Forest machine learning model is actually what's called an Ensemble Method. This means that it consists of several simpler models, called weak learners, working together to produce a stronger prediction. With Random Forests, the udnerlying simpler model is called a Decision Tree.\n",
+    "\n",
+    "Decision Trees make predictions by taking unseen data, such as a potential new charity donor, and asking a series of questions about that data. Eventually, in our case, the model will ask enough questions that it will eventually have enough information to decide if an individual earns more thank $50,000. The training of the decision tree model consists of deciding which questions to ask and in what order, with the answer to each question leading to a new question, forming a tree like structure. An example question might be, \"Is the individual Male or Female?\", which relates to one the columns, called features, in our dataset. The model determines the importance of these questions and therefore their position in the tree, by measuring the amount of information that was gained about the dataset by answering the question. The extent to which a question reduces uncertaintiy about the dataset and increases knowledge of the dataset determines how early in the tree that question is asked.\n",
+    "\n",
+    "Decision trees are great for producing accurate results. However sometimes, expecially when there is a relatively high number of features (such as with our dataset), they simply memorise the data with which they are trained. This means they might not be very good at making predictions with new data. This is where the Random Forest model comes to the rescue. The Random Forest model consists of many Decision Tree models. However, each of these Decision Tree models is only trained on a random subset of the feature columns in our data. What happens when we use our Random Forest to predict how much a new individual earns is that each of these sub decision tree's makes it's own invididual prediction. The final \"answer\", in our case less than or equal to $50,000 or higher than $50,000, is the answer which was produced by the highest number of these sub trees. This ensures that the Random Forest model isn't simply memorising the original training dataset and will potentially do a great job of making predictions for new individuals.\n",
+    "\n"
    ]
   },
   {
