--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -3506,15 +3506,32 @@
     "\n",
     "|     Metric     | Unoptimized Model | Optimized Model |\n",
     "| :------------: | :---------------: | :-------------: | \n",
-    "| Accuracy Score |                   |                 |\n",
-    "| F-score        |                   |   EXAMPLE       |\n"
+    "| Accuracy Score |      0.8431       |     0.8572      |\n",
+    "| F-score        |      0.6842       |     0.7271      |\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer:**\n",
+    "\n",
+    "The optimized model performed marginally better than the unoptimized model. Optmization only made a single percentage point of improvement to the accuracy score, however a more substantial four percentage point improvement could be seen for the F-score.\n",
+    "\n",
+    "The results from the optimized model are certainly far better than the naive predictor benchmarks developed earlier.\n",
+    "\n",
+    "@todo: Go back and double check the calculations for the Naive Predictors. Use your intuition to determine if they might be too low.\n",
+    "\n",
+    "@todo: Play with the grid search! See if you can beat it.\n",
+    "\n",
+    "Params used for original result:\n",
+    "parameters = {\n",
+    "    'criterion': ['gini', 'entropy'],\n",
+    "    'max_depth': [1, 10, 100, 1000, 1000],\n",
+    "    'min_samples_split': [2, 20, 200, 2000],\n",
+    "    'min_samples_leaf': [1, 10, 100, 1000],\n",
+    "    'max_features': ['auto', 'sqrt', 'log2', None]\n",
+    "}"
    ]
   },
   {
