--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -3558,7 +3558,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "1. occupation\n",
+    "\n",
+    "The occupation of an individual often determines how much income they earn. This is because various occupations require different skills, knowledge and are in different levels of scarcity and demand for talent. It's highly likely that income and occupation are correlated.\n",
+    "\n",
+    "2. capital-gain\n",
+    "\n",
+    "An individual with a high captial gain is likely to have accumulated assets such as stocks or property. Therefore it's likely that there would be a correlation between higher incomes for these individuals and their ability to afford to own such assets.\n",
+    "\n",
+    "3. education-level\n",
+    "\n",
+    "Most of the individuals in this data set are from the USA. It is well known that in the United States there is a wide incomed disparity between those with college degrees and those without. So therefore it's likely there would be a correlation between the education level of an individual and their income.\n",
+    "\n",
+    "4. age\n",
+    "\n",
+    "In general, individuals start their careers at a young age and their pay tends to increase as they gain further experience and expertise, while at the same time growing older. With experience and expertise generally comes increased incomes, although the amount of increase depends on other factors such as occupation. In a general sense, there should be a correlation between the age of an individual and the amount of income they earn.\n",
+    "\n",
+    "5. Sex\n",
+    "\n",
+    "There's still a known gender pay gap in the United States (where most of the individuals in this dataset are from), so income and gender would very likely have a correlation in this dataset. In particular, it can be observed that there is sexism at play in positions of wealth and power and so regardless of the pay gap, women might often be less likely to obtain some higher paying positions at all.\n",
+    "\n",
+    "\n",
+    "Notes\n",
+    "- native-country seemed an obvious choice, however looking at the distribution of data it can't be very important in the current context since the overwhelming number of data points are for USA.\n",
+    "- Same as above for race. Individuals in the dataset are overwhelmingly white."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# visualisations\n",
+    "# data['workclass'].value_counts().plot(kind='bar')\n",
+    "# display(data.head(n=200))\n",
+    "# display(testdata.hist('native-country'))"
    ]
   },
   {
