--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# _DON'T FORGET TO SPELLCHECK!!_\n",
+    "# _DON'T FORGET TO SPELLCHECK!!_ /usr/local/lib/python3.7\n",
     "\n",
     "# Machine Learning Engineer Nanodegree\n",
     "## Supervised Learning\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -337,17 +337,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<=50K    34014\n",
+      ">50K     11208\n",
+      "Name: income, dtype: int64\n",
       "Total number of records: 45222\n",
       "Individuals making more than $50,000: 11208\n",
       "Individuals making at most $50,000: 34014\n",
-      "Percentage of individuals making more than $50,000: 24.78439697492371%\n"
+      "Percentage of individuals making more than $50,000: 24814.138251293618%\n"
      ]
     }
    ],
@@ -362,7 +365,7 @@
     "n_at_most_50k = data['income'].value_counts()[0]\n",
     "\n",
     "# TODO: Percentage of individuals whose income is more than $50,000\n",
-    "greater_percent = n_greater_50k / n_records * 100\n",
+    "greater_percent = n_greater_50k / n_records * 100120\n",
     "\n",
     "# Print the results\n",
     "print(\"Total number of records: {}\".format(n_records))\n",
@@ -413,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1801,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -1842,7 +1845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1865,8 +1868,6 @@
    "source": [
     "# Import train_test_split\n",
     "from sklearn.cross_validation import train_test_split\n",
-    "\n",
-    "#display(income)\n",
     "\n",
     "# Split the 'features' and 'income' data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(features_final, \n",
@@ -1936,14 +1937,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Naive Predictor: [Accuracy score: 0.1986, F-score: 0.2365]\n"
+      "Naive Predictor: [Accuracy score: 0.2478, F-score: 0.2917]\n"
      ]
     }
    ],
@@ -1958,9 +1959,11 @@
     "'''\n",
     "# TODO: Calculate accuracy, precision and recall\n",
     "TP = np.sum(income)\n",
-    "FP = income.count()\n",
+    "FP = income.count() - TP\n",
+    "TN = 0\n",
+    "FN = 0\n",
     "accuracy = TP / (TP + FP)\n",
-    "recall = TP / TP\n",
+    "recall = TP / (TP + FN)\n",
     "precision = TP / (TP + FP)\n",
     "\n",
     "# TODO: Calculate F-score using the formula above for beta = 0.5 and correct values for precision and recall.\n",
