Adjustments to Question 2.

--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -1937,7 +1937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1958,11 +1958,12 @@
     "FN = 0 # No predicted negatives in the naive case\n",
     "'''\n",
     "# TODO: Calculate accuracy, precision and recall\n",
+    "total = income.count()\n",
     "TP = np.sum(income)\n",
-    "FP = income.count() - TP\n",
+    "FP = total - TP\n",
     "TN = 0\n",
     "FN = 0\n",
-    "accuracy = TP / (TP + FP)\n",
+    "accuracy = (TP + TN) / total\n",
     "recall = TP / (TP + FN)\n",
     "precision = TP / (TP + FP)\n",
     "\n",
@@ -2016,90 +2017,85 @@
     "\n",
     "_Describe one real-world application in industry where the model can be applied._\n",
     "\n",
-    "The Random Forest model has a variety of practical real world applications. Bank's in particular make use of the Random Forest model to indentify customers who will repay their debts on time. It can also be used for fraud detection. In the ecommerce space, the model can be used to recommend products to customers.\n",
+    "The Random Forest model has a variety of practical real-world applications. Bank's, in particular, can make use of the Random Forest model to identify customers who will repay their debts on time. It can also be used for fraud detection. In the e-commerce space, the model can be used to recommend products to customers.\n",
     "\n",
     "_What are the strengths of the model; when does it perform well?_\n",
     "\n",
-    "- RF is particularly useful when the given data is not linearly separable.\n",
-    "- It tends to work well \"out of the box\" without much parameter turning.\n",
+    "- The random forest model is particularly useful when the given data is not linearly separable.\n",
+    "- It tends to work well \"out of the box\" without much parameter tuning.\n",
     "- It's known to be relatively fast and scalable.\n",
-    "- It's output can indicate which features in a given dataset are the most important, having the most impact on the prediction or classification result. \n",
+    "- Its output can indicate which features in a given dataset are the most important, having the most impact on the prediction or classification result. \n",
     "- Known to generally have high accuracy.\n",
-    "- Known to work well with categorical features as well as continous ones.\n",
+    "- Known to work well with categorical features as well as continuous ones.\n",
     "\n",
     "_What are the weaknesses of the model; when does it perform poorly?_\n",
     "\n",
-    "- RF's have the potential to overfit on some datasets, but are still much less likely to overfit than a simple decision tree.\n",
-    "- The results of RF usage is Less easy for humans to understand than the output of regular decision trees (black box).\n",
+    "- Random Forests have the potential to overfit on some datasets but are still much less likely to overfit than a simple decision tree.\n",
+    "- The results of RF usage are less easy for humans to understand than the output of regular decision trees (black box).\n",
     "\n",
     "_What makes this model a good candidate for the problem, given what you know about the data?_\n",
     "\n",
-    "- The Random Forest model is generally known for high accuracy (in a general sense, I'm not referring to the specific performance metric). This isi mportant since, as stated earlier, we realy don't want any false positives.\n",
+    "- The Random Forest model is generally known for high accuracy, which we have identified as an important performance metric for the CharityML model solution.\n",
     "\n",
-    "- The Random Forest model is good at working with categorical features. The dataset has more categorical than continous features, so hopefully this attribute of RF will be useful.\n",
+    "- The Random Forest model is good at working with categorical features. The dataset has more categorical than continuous features, so hopefully, this attribute of Random Forests will be useful.\n",
     "\n",
     "- The dataset has quite a few features. Random Forest is less likely to overfit in this scenario than a regular decision tree, which might give us the accuracy we need, but at a cost of overfitting.\n",
     "\n",
-    "- When researching the types of real world applications of Random Forests, I noticed that many such applications involved solving similar problems to the Finding Donors problem space. So this little bit of simple intuition is another reason this model might be a good candidate.\n",
+    "- When researching the types of real-world applications of Random Forests, I noticed that many such applications involved solving similar problems to the Finding Donors problem space. So this little bit of simple intuition is another reason this model might be a good candidate.\n",
     "\n",
     "\n",
     "##### Logistic Regression\n",
     "\n",
     "_Describe one real-world application in industry where the model can be applied._\n",
     "\n",
-    "Logistic Regression is often used in Medical diagnosis of deseases and conditions, when applied to a set of features such as the patients symptoms, details and medical history.\n",
+    "Logistic Regression models are often used to aid the Medical diagnosis (classification) of diseases and conditions when trained on a set of features such as the patient's symptoms, details and medical history.\n",
     "\n",
     "_What are the strengths of the model; when does it perform well?_\n",
     "\n",
     "- Logistic Regression is adept at solving Binary Classification problems.\n",
     "- LR work's well when the data is linearly separable.\n",
-    "- LR is a relatively simple model, so is a good starting point with regards to not overcomplicating the solution.\n",
+    "- LR is a relatively simple model, so is a good starting point with regards to not overcomplicating a solution.\n",
     "- LR models are relatively fast to train and tend to scale well to large datasets.\n",
     "- LR models are useful when a probability is desired for the classification outcome.\n",
-    "- LR models are well suited when all of the features are independant.\n",
-    "- It's output can indicate which features in a given dataset are the most important, having the most impact on the prediction or classification result. \n",
+    "- LR models are well suited when all of the features are independent.\n",
+    "- Its output can indicate which features in a given dataset are the most important, having the most impact on the prediction or classification result. \n",
     "\n",
     "_What are the weaknesses of the model; when does it perform poorly?_\n",
     "\n",
     "- Logistic Regression may not be an appropriate model choice when the data is NOT linearly separable.\n",
     "- LR has the potential to overfit on small datasets.\n",
-    "- Logistic Regression models are known to be sensative to outliers.\n",
-    "- LR models are not well suited to scenarious where features are dependant.\n",
+    "- Logistic Regression models are known to be sensitive to outliers.\n",
+    "- LR models are not well suited to scenarios where features are dependent.\n",
     "\n",
     "_What makes this model a good candidate for the problem, given what you know about the data?_\n",
     "\n",
-    "- This problem is a binary classification problem, for which Logistic Regression is known to useful.\n",
+    "- This problem is a binary classification problem, for which Logistic Regression is known to be useful.\n",
     "\n",
     "- LR, being suited for binary classification problems, is also a relatively simple model and solution and therefore a good place to start with regards to ensuring the solution isn't overly complicated if it doesn't have to be.\n",
     "\n",
-    "- When researching the types of real world applications of Logistic Regression, I noticed that some such applications involved solving similar problems to the Finding Donors problem space. So this little bit of simple intuition is another reason this model might be a good candidate.\n",
+    "- When researching the types of real-world applications of Logistic Regression, I noticed that some such applications involved solving similar problems to the Finding Donors problem space. So this little bit of simple intuition is another reason this model might be a good candidate.\n",
     "\n",
     "##### Support Vector Machine (SVM):\n",
     "\n",
     "_Describe one real-world application in industry where the model can be applied._\n",
     "\n",
-    "Support Vector Machines are known to work well with high dimensions. As a result they can be very useful for text classification problems such spam detection, where the number of features is high. They are also perform well in image recognition problems, such as handwriting recognition.\n",
+    "Support Vector Machines are known to work well with high dimensions. As a result, they can be very useful for text classification problems such as spam detection, where the number of features is high. They also perform well in image recognition problems, such as handwriting recognition.\n",
     "\n",
     "_What are the strengths of the model; when does it perform well?_\n",
     "\n",
     "- SVM's are known to work well with binary classification problems.\n",
-    "- SVM's are great option when working with high dimensional data.\n",
+    "- SVM's are a great option when working with high dimensional data.\n",
     "- The use of the Kernal trick makes SVM's useful in situations when the data cannot be separated linearly.\n",
-    "- SVM's are known to produce accurate results when tuned correctly.\n",
+    "- SVM's are known to produce highly accurate results when optimised correctly.\n",
     "\n",
     "_What are the weaknesses of the model; when does it perform poorly?_\n",
     "\n",
-    "- Multiclass problems (Source!)\n",
-    "\n",
     "- SVM's can be prone to overfitting when hyperparameters are not tuned correctly.\n",
-    "\n",
-    "- Regression? I know it can do it, but is it good at it?\n",
-    "\n",
-    "- SVM's are probably not an appropriate model choice when classification's are required to be expressed as probabilities.\n",
+    "- SVM's are probably not an appropriate model choice when classifications are required to be expressed as probabilities.\n",
     "- SVM's can take a long time to train on large datasets.\n",
     "- SVM's require a good deal of parameter tuning. In particular, it can be tricky to determine the right Kernal to use.\n",
     "- SVM's are known for lacking human understandable transparency in their results (black box). This can make feature engineering and hyperparameter tuning more challenging. It's also more difficult to determine which features are important.\n",
-    "- SVM's may not be be the best model choice when the problem requires many classifications to be made.\n",
+    "- SVM's may not be the best model choice when the problem requires that many classifications need to be made.\n",
     "\n",
     "_What makes this model a good candidate for the problem, given what you know about the data?_\n",
     "\n",
