Adjustments to Question 7.

--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -2461,8 +2461,6 @@
       "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
       "  'precision', 'predicted', average, warn_for)\n",
       "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
       "  'precision', 'predicted', average, warn_for)\n"
      ]
     },
@@ -2550,70 +2548,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
       "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
       "  'precision', 'predicted', average, warn_for)\n"
      ]
@@ -2631,10 +2565,10 @@
     "# HINT: parameters = {'parameter_1': [value1, value2], 'parameter_2': [value1, value2]}\n",
     "parameters = {\n",
     "    'criterion': ['gini', 'entropy'],\n",
-    "    'n_estimators': [10, 50, 100, 200],\n",
-    "    'max_depth': [1, 10, 100],\n",
-    "    'min_samples_split': [2, 20, 200],\n",
-    "    'min_samples_leaf': [1, 10, 100],\n",
+    "    'n_estimators': [10, 20, 40, 80],\n",
+    "    'max_depth': [2, 4, 6, 8, 10],\n",
+    "    'min_samples_split': [2, 4, 6, 8, 10],\n",
+    "    'min_samples_leaf': [2, 4, 6, 8, 10],\n",
     "}\n",
     "#'min_weight_fraction_leaf': [0, 0.1, 0.2, 0.5, 0.75, 1]\n",
     "#min_weight_fraction_leaf : float, optional (default=0.)\n",
@@ -2832,35 +2766,37 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "I only managed to select two out of the five features correctly on intuition! I managed to select _capital-gain_ and _age_. But missed _hours-per-week_ and _maritial-status_ and instead selected _sex_ and _occupation_. I think my intuition was correct with regards to _education-num_, however I selected the wrong feature in _education_level_.\n",
+    "I only managed to select two out of the five features correctly on intuition! I managed to select _capital-gain_ and _age_. But missed _hours-per-week_ and _maritial-status_ and instead selected _sex_ and _occupation_. I think my intuition was correct with regards to _education-num_, however, I selected the wrong feature in _education_level_.\n",
     "\n",
     "- education-num vs education_level\n",
     "\n",
-    "I thought some aspect of a person's education would factor highly. However I assumed that the actual formal education_level might have a stronger importance. It might be that education-num has a higher importance with regards to the model predictions because it is a continuos rather than a categorical feature.\n",
+    "I thought some aspect of a person's education would factor highly. However, I assumed that the actual formal education_level might have a stronger importance. It might be that education-num has a higher importance with regards to the model predictions because it is a continuous feature, rather than a categorical feature.\n",
     "\n",
     "- marital-status\n",
     "\n",
     "Intuitively, I did not expect that this feature would be all that important and was surprised to see this feature included in the top five. I perhaps thought that marital status \n",
     "\n",
+    "@TODO:\n",
+    "\n",
     "- capital-gain\n",
     "\n",
-    "Capital gain was one of the two features I managed to select correctly on intuition. It makes sense that individual's with appreciating assets might be more likely to have a higher income.\n",
+    "Capital gain was one of the two features I managed to select correctly on intuition. It makes sense that individuals owning appreciating assets might be more likely to have a higher income.\n",
     "\n",
     "- hours-per-week\n",
     "\n",
-    "I did not expect this feature to be part of the top five most important. I had assumed that hours-per-week simply predicted overtime and that both high and low paying job's sometimes require overtime and so therefore might balance each other out. The feature importance extraction results show my assumption was shallow and didn't really take into account that much of that overtime might have been payed, enough so to bring certain lower paying jobs above the $50,000 threshold.\n",
+    "I did not expect this feature to be part of the top five most important. I had assumed that hours-per-week simply predicted overtime and that both high and low paying jobs sometimes require overtime and so, therefore, might balance each other out. The feature importance extraction results show my assumption was shallow and didn't really take into account other considerations, such as the possibility that much of that overtime might have been paid, enough so to bring certain lower paying jobs above the $50,000 threshold.\n",
     "\n",
     "- age\n",
     "\n",
-    "This was the second of the two features I managed to select correctly, although I did not rank it high enough to match it's actual performance. The high importance of age makes perfect sense and it was good to see this confirmed via the feature importance analysis. In my initial assumption, I highlighted the general rise in income that can occur as a person ages and simultaneously gains experience, seniority and therefore income. However I failed to mention that income can peak mid-late career. Perhaps this additional relationship accounts for the stronger than expected feature importance.\n",
+    "This was the second of the two features I managed to select correctly, although I did not rank it high enough to match its actual performance in the feature extraction results. The high importance of age makes perfect sense and it was good to see this confirmed. In my initial assumption, I highlighted the general rise in income that can occur as a person ages and simultaneously gains experience, seniority and therefore income. However, I failed to mention that income can peak mid-late career. Perhaps this additional relationship accounts for the stronger than expected feature importance.\n",
     "\n",
     "- occupation\n",
     "\n",
-    "This was my top ranked selection based on intuition. I was very surprised to see this feature did not make the top five most importance features at all. Perhaps what I overlooked was the fact that various occupations have different incomes that relate to different experience levels within those occupations.\n",
+    "This was my top ranked selection based on intuition. I was very surprised to see this feature did not make the top five most important features at all. Perhaps what I overlooked was the fact that various occupations have different incomes that relate to different experience levels within those occupations.\n",
     "\n",
     "- sex\n",
     "\n",
-    "It seems I have misjudged the employers of the individuals in this particular dataset! Despite my assumption that gender might result in wide enough pay gaps to result in more men being above the $50,000 threshold, the feature importance extraction results indicate that if such pay gaps exist, they aren't often large enough to often cause a male individual to earn above the $50,000 threshold while a similar female stays below it.\n"
+    "It seems I have misjudged the employers of the individuals in this particular dataset! Despite my assumption that gender might result in wide enough pay gaps to result in more men being above the $50,000 threshold, the feature importance extraction results indicate that if such pay gaps exist, they aren't often large enough to cause a male individual to earn above the $50,000 threshold while a similar female stays below it.\n"
    ]
   },
   {
